# Element

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Element/Headers/: camera.h  camera.hpp  common.hpp  element.h  element.hpp  glitter.hpp  grass.h  mesh.h  mesh.hpp  model.h  model.hpp  shader.h  shader.hpp  simple.h  simple.hpp
Element/Models/: Thumbs.db
Element/Models/Nanosuit/: Thumbs.db  nanosuit.blend
Element/Models/Sponza/textures/: Thumbs.db
Element/Shaders/: depth.glf  fullscreen.glg  grass.glf  grass.glg  grass.gltc  grass.glte  grass.glv  post_texture_zoom.glf  raymarch.glf  red.glf  sample_frag.glf  sample_geom.glg
Element/Sources/: grass.cpp  main.cpp
Element/Textures/: Thumbs.db
